--- a/Config.in
+++ b/Config.in
@@ -1,6 +1,7 @@
 menu "Target packages"
 
 source "$BR2_EXTERNAL_SVEYRET_PATH/package/duniter/Config.in"
+source "$BR2_EXTERNAL_SVEYRET_PATH/package/gecogvidanto/Config.in"
 source "$BR2_EXTERNAL_SVEYRET_PATH/package/pam-krb5/Config.in"
 
 endmenu
